--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1 a href="/">Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
                 <li>
