--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- navigation -->
     <header class="header">
         <h1 a href="/">Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -24,7 +25,11 @@
             </ul>
         </nav>
     </header>
+
+    <!-- hero image -->
     <section class="hero"></section>
+    
+    <!-- What We Do section -->
     <section id="what-we-do">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="seo diagram"class="float-left" />
@@ -48,6 +53,8 @@
             </p>
         </div>
     </section>
+
+    <!-- Benefits section -->
     <section class="benefits">
         <div>
             <h3>Lead Generation</h3>
@@ -71,6 +78,8 @@
             </p>
         </div>
     </section>
+
+    <!-- footer -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
