--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
     
     <!-- What We Do section -->
     <section id="what-we-do">
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        <div id="search-engine-optimization" class="about-us">
             <img src="./assets/images/search-engine-optimization.jpg" alt="seo diagram"class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div id="online-reputation-management" class="about-us">
             <img src="./assets/images/online-reputation-management.jpg" alt="reputation chart" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        <div id="social-media-marketing" class="about-us">
             <img src="./assets/images/social-media-marketing.jpg" alt="types of social media" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
